# qtcreator-meson-plugin

./: .gitattributes  .gitignore  LICENSE.txt  MesonProjectManager.json.in  README.md  azure-pipelines.yml  constants.h  meson.build  mesonbuildconfigurationfactory.cpp  mesonbuildconfigurationfactory.h  mesonproject.cpp  mesonproject.h  mesonprojectimporter.h  mesonprojectmanager.pro  mesonprojectmanager_global.h  mesonprojectmanagerconstants.h  mesonprojectmanagerplugin.cpp  mesonprojectmanagerplugin.h  mesonprojectparser.cpp  mesonprojectparser.h  mesonprojectwizard.cpp  mesonprojectwizard.h  ninjamakestep.cpp  ninjamakestep.h  resources.qrc  testplan.md  tests.cpp
ci/: extract-qt-installer.sh
src/: constants.h  filelistnode.cpp  filelistnode.h  fixdirectoryparser.cpp  fixdirectoryparser.h  mesonbuildconfiguration.cpp  mesonbuildconfiguration.h  mesonbuildfileparser.cpp  mesonbuildfileparser.h  mesonbuildinfo.cpp  mesonbuildinfo.h  mesonconfigurationdialog.cpp  mesonconfigurationdialog.h  mesonfilenode.cpp  mesonfilenode.h  mesonfilesubfoldernode.cpp  mesonfilesubfoldernode.h  mesonproject.cpp  mesonproject.h  mesonprojectimporter.cpp  mesonprojectimporter.h  mesonprojectmanagerplugin.cpp  mesonprojectmanagerplugin.h  mesonprojectnode.cpp  mesonprojectnode.h  mesonprojectparser.cpp  mesonprojectparser.h  mesonprojectpartmanager.cpp  mesonprojectpartmanager.h  mesonprojectwizard.cpp  ninjamakestep.cpp  ninjamakestep.h  ninjamakestepconfigwidget.cpp  ninjamakestepconfigwidget.h  nodes.cpp  nodes.h  pathresolver.cpp  pathresolver.h  (+2 more)
testprojects/simple_project/: meson.build
